tests/api/reference/negative/12-map-new-arity.asm
const invalid: map = map.new(1)
